<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.403" />

    <Button
        android:id="@+id/button1"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="20sp"
        android:text="@string/text1"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#10D318"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56" />

    <Button
        android:id="@+id/button2"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="180dp"
        android:text="@string/text2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56" />

    <Button
        android:id="@+id/button3"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="292dp"
        android:layout_marginTop="380dp"
        android:text="@string/text3"
        android:textSize="20sp"
        app:layout_constraintBottom_width="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:text="@string/text4"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.678" />

    <Button
        android:id="@+id/button5"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="176dp"
        android:text="@string/text5"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.678" />

    <Button
        android:id="@+id/button6"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="292dp"
        android:text="@string/text6"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.678" />

    <Button
        android:id="@+id/button7"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:text="@string/text7"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.798" />

    <Button
        android:id="@+id/button8"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="176dp"
        android:text="@string/text8"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.798" />

    <Button
        android:id="@+id/button9"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="292dp"
        android:text="@string/text9"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.798" />

    <Button
        android:id="@+id/button10"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginTop="616dp"
        android:text="@string/text10"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_margin_constraintLeft_toLeftOf="200dp"
        app:layout_margin_left="150dp"
        tools:layout_editor_absoluteX="180dp" />

    <Button
        android:id="@+id/button11"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:text="@string/text11"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.904" />

    <Button
        android:id="@+id/button12"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="292dp"
        android:text="@string/text12"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.904" />

</androidx.constraintlayout.widget.ConstraintLayout>